--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -40,6 +40,7 @@
     "Deactivate": "تعطيل",
     "Activate": "تفعيل",
     "Delete": "حذف",
+    "Order Now": "أطلب الآن",
     "version": "إصدار",
     "Are you sure to delete this?": "هل أنت متأكد من حذف هذا؟",
     "Close": "إغلاق",
