--- a/resources/lang/be.json
+++ b/resources/lang/be.json
@@ -15,6 +15,7 @@
     "Addon successfully removed.": "Надбудова паспяхова выдалена.",
     "Choose file": "Выберыце файл",
     "Addons": "Адоны",
+    "Order Now": "Заказаць зараз",
     "My Shop": "Мія крама",
     "About Us": "Аб нас",
     "Upload Addon": "Загрузіць адон",
