--- a/resources/lang/bg.json
+++ b/resources/lang/bg.json
@@ -15,6 +15,7 @@
     "Addon successfully removed.": "Добавката е премахната успешно.",
     "Choose file": "Изберете файл",
     "Addons": "добавки",
+    "Order Now": "Заказать сейчас",
     "Upload Addon": "Качване на добавка",
     "Upload Zip File": "Качете Zip файл",
     "Browse": "Прегледайте",
