--- a/resources/lang/bn.json
+++ b/resources/lang/bn.json
@@ -15,6 +15,7 @@
     "Addon successfully removed.": "অ্যাডন সফলভাবে সরানো হয়েছে।",
     "Choose file": "ফাইল পছন্দ কর",
     "Addons": "অ্যাডঅনস",
+    "Order Now": "এখন প্রত্যাহার করুন",
     "Upload Addon": "অ্যাডন আপলোড করুন",
     "Upload Zip File": "জিপ ফাইল আপলোড করুন",
     "Browse": "ব্রাউজ করুন",
