--- a/resources/lang/ca.json
+++ b/resources/lang/ca.json
@@ -18,6 +18,7 @@
     "Upload Addon": "Carregueu el complement",
     "Upload Zip File": "Carregueu un fitxer zip",
     "Browse": "Navega",
+    "Order Now": "Comanda ara",
     "Note": "Nota",
     "About Us": "Sobre nosaltres",
     "My Shop": "El meu magatzem",
