--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -12,6 +12,7 @@
     "Can not be deleted. This is core addon.": "Can not be deleted. This is core addon.",
     "Addon successfully removed.": "Addon successfully removed.",
     "Choose file": "Choose file",
+    "Order Now": "Order Now",
     "Show company description": "Show company description",
     "Show visit stats": "Show visit stats",
     "Show profile": "Show profile",
