--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -32,6 +32,7 @@
     "Premium": "プレミアム",
     "Deactivate": "無効化",
     "Activate": "活性化",
+    "Order Now": "今すぐ注文",
     "Delete": "削除",
     "version": "バージョン",
     "Are you sure to delete this?": "これを削除してもよろしいですか？",
