--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -23,6 +23,7 @@
     "Cancel": "annuleren",
     "Upload Now": "Upload nu",
     "All": "Alle",
+    "Order Now": "Bestel nu",
     "About Us": "Over ons",
     "My Shop": "Mijn winkel",
     "Active": "Actief",
