--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1280,7 +1280,7 @@
     "Default to customer billing address": "Default to customer billing address",
     "Force shipping to the customer billing address": "Force shipping to the customer billing address",
     "No location found.": "No location found.",
-    "Shop Name": "Manufacturer Name",
+    "Shop Name": "Factory Name",
     "Website": "Website",
     "Fax": "Fax",
     "This is your only shop, can not be deleted.": "This is your only shop, can not be deleted.",
@@ -3540,11 +3540,11 @@
     "We are here to give all the solution you need to run your online business. And that’s why we are coming up with an individual mobile app for our sellers. Stay updated online anywhere anytime.": "We are here to give all the solution you need to run your online business. And that’s why we are coming up with an individual mobile app for our sellers. Stay updated online anywhere anytime.",
     "Get regular new offers, discounts & more!": "Get regular new offers, discounts & more!",
     "Register now with few easy steps!": "Register now with few easy steps!",
-    "Seller Registration Form": "Manufacturer Registration Form",
+    "Seller Registration Form": "Factory Registration Form",
     "Vendor Address": "Vendor Address",
     "City ": "City ",
     "Country ": "Country ",
-    "Shop Details": "Manufacturer Details",
+    "Shop Details": "Factory Details",
     "Drag & drop files to upload or": "Drag & drop files to upload or",
     "Change Photo": "Change Photo",
     "Note: Use only JPG, PNG & WebP formats.": "Note: Use only JPG, PNG & WebP formats.",
