--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -21,7 +21,7 @@
     "Browse": "تصفح",
     "Note": "ملحوظة",
     "Upload your addon zip file.": "قم بتحميل ملف مضغوط الخاص بالملحق.",
-    "Cancel": "يلغي",
+    "Cancel": "الغاء",
     "Upload Now": "تحميل الآن",
     "All": "الجميع",
     "Active": "نشيط",
@@ -48,7 +48,7 @@
     "image": "صورة",
     "View": "منظر",
     "Delete :x": "حذف: x",
-    "User": "المستعمل",
+    "User": "المستخدم",
     "Id": "هوية شخصية",
     "Picture": "صورة",
     "Name": "اسم",
@@ -76,7 +76,7 @@
     "Show file": "عرض الملف",
     "No file": "لا ملف",
     "Campaign": "حملة",
-    "Commission Plan": "خطة العمولة",
+    "Commission Plan": "عمولة الباقة",
     "Addon": "إضافة",
     "Affiliate Panel": "لوحة التحكم التابعة",
     "Please verify the affiliate addon for access this addon features.": "يرجى التحقق من الوظيفة الإضافية التابعة للوصول إلى ميزات هذه الوظيفة الإضافية.",
@@ -135,7 +135,7 @@
     "Create": "خلق",
     "Edit :x": "تحرير: x",
     "Update": "تحديث",
-    "Create Plan": "إنشاء خطة",
+    "Create Plan": "إنشاء باقة",
     "Flat": "مسطحة",
     "Percentage": "النسبة المئوية",
     "Multi-level commission? How many tiers?": "لجنة متعددة المستويات؟ كم عدد المستويات؟",
@@ -150,11 +150,11 @@
     "continue matching commission plans": "استمرار مطابقة خطط اللجنة",
     "use default commission": "استخدم العمولة الافتراضية",
     "apply zero commission": "تطبيق عمولة صفرية",
-    "Edit Plan": "تعديل الخطة",
+    "Edit Plan": "تعديل الباقة",
     "Commission Plans": "خطط العمولة",
     "Plan": "يخطط",
     "Commission Type": "نوع العمولة",
-    "Dashboard": "لوحة القيادة",
+    "Dashboard": "لوحة التحكم",
     "Total Revenue": "إجمالي الإيرادات",
     "Net Commission": "صافي العمولة",
     "Gross Commission": "العمولة الإجمالية",
@@ -239,7 +239,7 @@
     "Sign Out": "خروج",
     "Admin": "مسؤل",
     "Affiliates": "الشركات التابعة",
-    "user": "مستخدم",
+    "user": "المستخدم",
     "Networks": "الشبكات",
     "Be a affiliate user": "كن مستخدمًا تابعًا",
     "Configure Payout": "تكوين الدفعة",
@@ -300,7 +300,7 @@
     "Blog has been successfully deleted.": "تم حذف المدونة بنجاح.",
     "Creating": "خلق",
     "Blogs": "المدونات",
-    ":x Information": ": x المعلومات",
+    ":x Information": ": x معلومات",
     "Featured Image": "صورة مميزة",
     "Upload image": "تحميل الصور",
     "All Category": "كل الفئات",
@@ -681,7 +681,7 @@
     "Check this box if the coupon grants free shipping. A free shipping method must be enabled in your shipping zone and be set to require 'a valid free shipping coupon": "حدد هذا المربع إذا كانت الكوبون تمنح شحنًا مجانيًا. يجب تمكين طريقة الشحن المجاني في منطقة الشحن الخاصة بك وتعيينها بحيث تتطلب ';قسيمة شحن مجانية صالحة';",
     "Expired": "منتهي الصلاحية",
     "Vendor": "مصنع",
-    "Products": "منتجات",
+    "Products": "المنتجات",
     "Minimum Spend": "الحد الأدنى للإنفاق",
     "You must spend more than or equal this amount to get coupon discount.": "يجب أن تنفق أكثر من أو يساوي هذا المبلغ للحصول على خصم الكوبون.",
     "How many times this coupon can be used.": "كم مرة يمكن استخدام هذا الكوبون .",
@@ -832,7 +832,7 @@
     "Form Type": "نوع النموذج",
     "Select Form Types": "حدد أنواع النماذج",
     "Click on or drag and drop components onto the main panel to build your form content.": "انقر أو اسحب وأفلت المكونات على اللوحة الرئيسية لبناء محتوى النموذج الخاص بك.",
-    "Clear": "صافي",
+    "Clear": "مسح",
     "Edit Form": "تحرير النموذج",
     "Back To My Forms": "العودة إلى نماذجي",
     "Copy Form Link": "نسخ ارتباط النموذج",
@@ -1124,7 +1124,7 @@
     "Search your files": "ابحث في ملفاتك",
     "Files selected": "تم تحديد الملفات",
     "Clear all": "امسح الكل",
-    "Add": "يضيف",
+    "Add": "إضافة",
     "Module MediaManager": "وحدة MediaManager",
     "Media Manager": "مدير الإعلام",
     "All files": "كل الملفات",
@@ -1246,6 +1246,7 @@
     "Sign up as a buyer": "إنشاء حساب كمشتري",
     "I plan to purchase the products": "أخطط لشراء المنتجات",
     "Sign up as a Factory": "إنشاء حساب كمصنع",
+    "Factory": "المصنع",
     "I plan to sell products": "أخطط لبيع المنتجات",
     "Already have an account?": "هل لديك حساب؟",
     "Enter your email and password to access your account": "أدخل بريدك الإلكتروني وكلمة المرور",
@@ -1256,8 +1257,8 @@
     "View Popup": "مشاهدة ملف Popup",
     "Orders": "الطلب #٪ s",
     "Invoice": "فاتورة",
-    "History": "تاريخ",
-    "Created": "مخلوق",
+    "History": "المعاملات السابقة",
+    "Created": "تم إنشاؤه",
     "Create RFQs": "إنشاء طلب سعر",
     "Fill out the form below to submit your quotation request": " أدخل البيانات التالية لإرسال طلب السعر",
     "POS": "نقاط البيع",
@@ -1490,12 +1491,12 @@
     "Subscription Code": "كود الاشتراك",
     "Payment Status": "حالة السداد",
     "The :x is not found.": "لم يتم العثور على: x.",
-    "This is not a private plan.": "هذه ليست خطة خاصة.",
+    "This is not a private plan.": "هذه ليست باقة خاصة.",
     "The link has been successfully generated": "تم إنشاء الرابط بنجاح",
     "The link has been successfully removed.": "لقد تم إزالة الرابط بنجاح.",
     "Failed to delete :x, please try again.": "فشل الحذف: x ، يرجى المحاولة مرة أخرى.",
-    "Plan Subscription": "خطة الاشتراك",
-    "Subscription Settings": "إعدادات الاشتراك",
+    "Plan Subscription": "اشتراك الباقة",
+    "Subscription Settings": "إعدادات اشتراك الباقة",
     "Member": "عضو",
     "Notification send successfully": "تم إرسال الإشعار بنجاح",
     "Subscription invoice sent successfully.": "فاتورة الاشتراك تم إرسالها بنجاح.",
@@ -1522,12 +1523,12 @@
     "Duration": "مدة",
     "The :x discount price field must be less than or equal to sale price.": "يجب أن يكون حقل سعر الخصم :x أقل من أو يساوي سعر البيع.",
     "Custom": "مخصص",
-    "No plan available under this category": "لا توجد خطة متاحة ضمن هذه الفئة",
+    "No plan available under this category": "لا توجد باقة متاحة ضمن هذه الفئة",
     "Subscription Setting": "إعداد الاشتراك",
     "Downgrade": "تخفيض",
     "Allow subscription downgrade": "السماح برجوع الاشتراك",
-    "Change Plan": "خطة التغيير",
-    "Allow change plan one to another": "السماح بتغيير خطة واحدة إلى أخرى",
+    "Change Plan": "تغيير الباقة",
+    "Allow change plan one to another": "السماح بتغيير الباقة واحدة إلى أخرى",
     "Type of restriction": "نوع القيد",
     "Subscription Renewal": "تجديد الاشتراك",
     "Automate": "أتمتة",
@@ -1542,7 +1543,7 @@
     "The expire days will be separated by commas, such as 3, 7.": "سيتم فصل أيام انتهاء الصلاحية بفاصلات، مثل 3، 7.",
     "Mail will be sent X number of days after seller subscription expires for the expire duration.": "سيتم إرسال البريد بعد X عدد من الأيام من انتهاء اشتراك البائع طوال مدة انتهاء الصلاحية.",
     "Remove (products)": "إزالة (المنتجات)",
-    "If a seller's subscription is not active, their products will be removed after x number of days. Additionally, when a seller downgrades to a lower plan and the limit of their new plan is exceeded, old products that exceed the limit will be deleted after x number of days.": "إذا لم يكن اشتراك البائع نشطًا، فسيتم حذف منتجاته بعد عدد معين من الأيام. بالإضافة إلى ذلك، عندما يقوم البائع بالتخفيض إلى خطة أقل ويتم تجاوز حد خطته الجديدة، فسيتم حذف المنتجات القديمة التي تتجاوز الحد بعد عدد معين من الأيام.",
+    "If a seller's subscription is not active, their products will be removed after x number of days. Additionally, when a seller downgrades to a lower plan and the limit of their new plan is exceeded, old products that exceed the limit will be deleted after x number of days.": "إذ لم يكن اشتراك البائع نشطًا، فسيتم حذف منتجاته بعد عدد معين من الأيام. بالإضافة إلى ذلك، عندما يقوم البائع بتخفيض الباقة إلى باقة أقل ويتم تجاوز حد الباقة الجديدة، فسيتم حذف المنتجات القديمة التي تتجاوز الحد بعد عدد معين من الأيام.",
     "Subscription Create": "إنشاء الاشتراك",
     "Please create a packge": "الرجاء إنشاء حزمة",
     "Click Here": "انقر هنا",
@@ -1587,15 +1588,15 @@
     "please email us": "يرجى مراسلتنا عبر البريد الإلكتروني",
     "Helpline": "خط المساعدة",
     "All rights reserved.": "كل الحقوق محفوظة.",
-    "Plan Create": "إنشاء خطة",
+    "Plan Create": "إنشاء باقة",
     "Add Feature": "إضافة ميزة",
     "Sort": "نوع",
     "Trial Day": "يوم المحاكمة",
-    "Plan Edit": "تعديل الخطة",
-    "Private Plan Link": "رابط الخطة الخاصة",
+    "Plan Edit": "تعديل الباقة",
+    "Private Plan Link": "رابط الباقة الخاصة",
     "Send email to the user": "أرسل بريدًا إلكترونيًا إلى المستخدم",
     "Generate Link": "إنشاء رابط",
-    "View Plan": "عرض الخطة",
+    "View Plan": "عرض الباقة",
     "Free": "حر",
     "Unlimited": "غير محدود",
     "Subscribe Now": "إشترك الآن",
@@ -1606,13 +1607,13 @@
     ":x created": ":x تم إنشاؤه",
     "Expiration Date": "تاريخ انتهاء الصلاحية",
     "Please Subscribe a package first.": "الرجاء الاشتراك في الباقة أولاً.",
-    "PLAN Includes": "تتضمن الخطة",
+    "PLAN Includes": "تتضمن الباقة",
     ":x Days Trial": ":x أيام تجريبية",
-    "Renew Plan": "تجديد الخطة",
-    "Upgrade Plan": "خطة الترقية",
-    "Downgrade Plan": "خطة الانحدار",
+    "Renew Plan": "تجديد الباقة",
+    "Upgrade Plan": "ترقية الباقة",
+    "Downgrade Plan": "تخفيض الباقة",
     "One time": "مره واحده",
-    "Private Plan": "خطة خاصة",
+    "Private Plan": "باقة خاصة",
     "Link Expire": "انتهاء صلاحية الرابط",
     "The :attribute field is invalid.": "حقل :attribute غير صالح.",
     "User email not found.": "البريد الإلكتروني للمستخدم غير موجود.",
@@ -1831,7 +1832,7 @@
     "Platform": "برنامج",
     "IP": "IP",
     "Login as": "سجل دخول",
-    "Role": "دور",
+    "Role": "الصلاحيات",
     "Registered": "مسجل",
     "Balance": "توازن",
     "Logged at": "تم تسجيل الدخول",
@@ -3045,7 +3046,7 @@
     "All Users": "جميع المستخدمين",
     "All Vendors": "كل الباعة",
     "Users Activity": "نشاط المستخدمين",
-    "Update Password": "تطوير كلمة السر",
+    "Update Password": "تعديل كلمة السر",
     "Designation": "تعيين",
     "Twitter": "تويتر",
     "Confirm Password": "تأكيد كلمة المرور",
@@ -3361,7 +3362,7 @@
     "Enter Password ": "أدخل كلمة المرور",
     "Passwors must be at least :x characters. Contain uppercase and lowercase letters, numbers and special characters.": "يجب أن تكون كلمات المرور على الأقل: x حرفًا. تحتوي على أحرف كبيرة وصغيرة وأرقام وأحرف خاصة.",
     "Repeat Password": "اعد كلمة السر",
-    "products": "منتجات",
+    "products": "المنتجات",
     "User Import": "استيراد المستخدم",
     "Product Import": "استيراد المنتج",
     "Attribute Import": "استيراد السمة",
@@ -3749,7 +3750,7 @@
     "Add Subscription": "إضافة الاشتراك",
     "Paused": "متوقف مؤقتًا",
     "Add Link": "إضافة رابط",
-    "Add Plan": "أضف خطة",
+    "Add Plan": "أضف باقة",
     "readable": "قابلة للقراءة",
     "writable": "قابل للكتابة",
     "readyState": "ReadyState",
