--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -134,7 +134,7 @@
     "Visibility": "الرؤية",
     "Create": "خلق",
     "Edit :x": "تحرير: x",
-    "Update": "تحديث",
+    "Update": "تعديل",
     "Create Plan": "إنشاء باقة",
     "Flat": "مسطحة",
     "Percentage": "النسبة المئوية",
@@ -895,10 +895,10 @@
     "Gateway": "بوابة",
     "Amount to be paid": "المبلغ الواجب دفعه",
     "currency": "عملة",
-    "Choose Payments from below": "اختر المدفوعات من الأسفل",
+    "Choose Payments from below": "اختر طريقة الدفع من الأسفل",
     "Payment cancelled.": "تم إلغاء الدفع.",
     "Payment": "الدفع",
-    "Back": "خلف",
+    "Back": "ارجع الى الخلف",
     "Logo": "شعار",
     "Already paid for the order.": "دفعت بالفعل للطلب.",
     "No gateway found.": "لم يتم العثور على بوابة.",
@@ -3925,6 +3925,22 @@
     "Seller Request Form": "نموذج طلب مصنع",
     "Saved for later, products you may love to buy now..": "تم الحفظ لوقت لاحق ، المنتجات التي قد تحب شرائها الآن ..",
     "All time": "كل الوقت",
+    "Important Notice Before Completing Payment": "تنبيه قبل إتمام عملية الدفع",
+    "Ensure your": "تأكد من أن",
+    "bank card (Visa or MasterCard)": "بطاقة البنك (فيزا أو ماستركارد)",
+    "balance covers the full subscription amount.": "رصيدك يغطي مبلغ الاشتراك بالكامل.",
+    "Verify that your": "تأكد من أن",
+    "daily or monthly purchase limit": "حد الشراء اليومي أو الشهري",
+    "is higher than the subscription amount": "أعلى من مبلغ الاشتراك",
+    "If the transaction is declined, it may be due to": "إذا تم رفض المعاملة، فقد يكون السبب",
+    "limit restrictions or online payment settings": "قيود الحدود أو إعدادات الدفع الإلكتروني",
+    "on your card.": "على بطاقتك.",
+    "Contact your": "اتصل بـ",
+    "bank": "البنك",
+    "to temporarily increase the limit or enable online payments.": "لزيادة الحد مؤقتاً أو تفعيل المدفوعات الإلكترونية.",
+    "If the issue persists, please": "إذا استمرت المشكلة، يرجى",
+    "try another card": "تجربة بطاقة أخرى",
+    "or payment method.": "أو طريقة دفع أخرى.",
     "Buy Now": "اشتري الآن",
     "Out of Stock": "إنتهى من المخزن",
     "All Availability": "كل التوفر",
