--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -3929,6 +3929,22 @@
     "Our Mission": "Our Mission",
     "Our Vision": "Our Vision",
     "Why Choose Us": "Why Choose Us",
+    "Important Notice Before Completing Payment": "Important Notice Before Completing Payment",
+    "Ensure your": "Ensure your",
+    "bank card (Visa or MasterCard)": "bank card (Visa or MasterCard)",
+    "balance covers the full subscription amount.": "balance covers the full subscription amount.",
+    "Verify that your": "Verify that your",
+    "daily or monthly purchase limit": "daily or monthly purchase limit",
+    "is higher than the subscription amount": "is higher than the subscription amount",
+    "If the transaction is declined, it may be due to": "If the transaction is declined, it may be due to",
+    "limit restrictions or online payment settings": "limit restrictions or online payment settings",
+    "on your card.": "on your card.",
+    "Contact your": "Contact your",
+    "bank": "bank",
+    "to temporarily increase the limit or enable online payments.": "to temporarily increase the limit or enable online payments.",
+    "If the issue persists, please": "If the issue persists, please",
+    "try another card": "try another card",
+    "or payment method.": "or payment method.",
     "AI-Powered Matching": "AI-Powered Matching",
     "Advanced AI algorithms to match Saudi products with global buyers": "Advanced AI algorithms to match Saudi products with global buyers",
     "Global Reach": "Global Reach",
