--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -422,7 +422,9 @@
     "Total brands to display should be between 3 to 20. Default is 9": "يجب أن يكون إجمالي العلامات التجارية المراد عرضها بين 3 إلى 20. الإعداد الافتراضي هو 9",
     "Category Type": "نوع الفئة",
     "Upload RFQs": "أرفق ملف RFQs",
-    "Categories": "التصنيفات",
+    "Categories": "الفئات",
+    "Exports Valley": "إكسبورتس فاللي",
+    "A comprehensive platform connecting Saudi factories with importers worldwide. We provide a safe and integrated environment for international trade, offering digital solutions backed by artificial intelligence to simplify communication, negotiation, and agreement processes.": "منصة متطورة تجمع المصانع السعودية مع المستوردين من جميع أنحاء العالم. نوفر بيئة آمنة ومتكاملة للتجارة الإلكترونية تمكن المصانع السعودية من الوصول إلى الأسواق العالمية بسهولة وتوفر حلولاً رقمية محلية مبتكرة ومدعومة بالذكاء الاصطناعي لتبسيط عمليات التواصل والتفاوض والاتفاق ",
     "Options": "خيارات",
     "Category Grid (Row X Col)": "شبكة الفئة (الصف X العمود)",
     "Rows": "صفوف",
@@ -446,7 +448,15 @@
     "Flash Sale Product": "منتج بيع فلاش",
     "Position": "موضع",
     "Left": "اليسار",
+    "Global Reach": "وصول عالمي",
+    "A shipping network that reaches all parts of the world": "شبكة شحن تمتد الي جميع أنحاء العالم",
+    "Start Your Business Journey Today": "ابدأ رحلتك التجارية اليوم",
+    "Join thousands of factories and importers who trust our platform and benefit from the best technical solutions in the market.": "انضم إلى آلاف المصانع والمستوردين الذين يثقون في منصتنا ويستفيدون من أفضل الحلول التقنية في السوق.",
     "Right": "الصحيح",
+    "Our Services": "خدماتنا",
+    "We provide comprehensive solutions for Saudi factories and importers": "نوفر حلول متكاملة للمصانع السعودية والمستوردين",
+    "Trusted Security": "أمان موثوق",
+    "Comprehensive protection for all transactions": "حماية متكاملة لجميع المعاملات",
     "Showcase Data": "عرض البيانات",
     "Product Type": "نوع المنتج",
     "Product Grid (Row X Col)": "شبكة المنتج (الصف X العمود)",
@@ -895,6 +905,7 @@
     "Gateway": "بوابة",
     "Amount to be paid": "المبلغ الواجب دفعه",
     "currency": "عملة",
+    "RFQs": "عروض الأسعار",
     "Choose Payments from below": "اختر طريقة الدفع من الأسفل",
     "Payment cancelled.": "تم إلغاء الدفع.",
     "Payment": "الدفع",
@@ -2984,12 +2995,34 @@
     "Product Tags": "علامات المنتج",
     "All Rating": "كل التقييم",
     "Comment": "تعليق",
-    "Seller": "تاجر",
+    "Seller": "بائع",
+    "Certified Saudi Factories": "مصانع سعودية معتمدة",
+    "Pre-Shipment Inspection": "فحص البضاعة قبل الشحن",
+    "Inspection and verification service before shipment to ensure quality and specifications.": "خدمة فحص وتدقيق البضاعة قبل الشحن لضمان الجودة والمطابقة.",
+    "Deal with certified Saudi factories with guaranteed quality and quality assurance for your peace of mind.": "التعامل مع مصانع سعودية معتمدة ومضمونة الجودة لراحة بالك.",
+    "Direct Contact with Factories": "التواصل مع المصانع مباشرة",
+    "Direct communication channels with factories to facilitate negotiations and complete transactions.": "تواصل مباشر مع المصانع السعودية المعتمدة للحصول على أفضل العروض.",
+    "Price Quote Request Without Registration": "طلب عرض سعر بدون تسجيل",
+    "Get price quotes from factories without the need to register on the platform.": "احصل على عروض الأسعار فوراً من المصانع دون الحاجة للتسجيل في المنصة.",
+    "Factory Comparison": "مقارنة المصانع",
+    "Advanced comparison tools for factories and prices to make informed purchasing decisions.": "أدوات مقارنة متقدمة للمصانع والأسعار لاتخاذ قرارات شراء مدروسة.",
+    "Integrated Logistics Services": "خدمات لوجستية متكاملة",
+    "Complete solutions for inspection, shipment, and delivery of your products safely and quickly.": "حلول شحن ونقل شاملة لضمان وصول منتجاتك للعملاء بأمان وسرعة.",
+    "Display Products for Each Platform Visitor": "عرض منتجاتك لكل زوار المنصة",
+    "Wide access and display of your products to all platform visitors to increase commercial opportunities.": "وصول واسع لمنتجاتك أمام جميع زوار المنصة لزيادة الفرص التجارية.",
+    "Factory Certification": "شهادة المصنع المعتمد",
+    "Obtain factory certification to enhance customer confidence in your products and services.": "الحصول على شهادة اعتماد تعزز ثقة العملاء في جودة منتجاتك وخدماتك.",
+    "E-Store": "متجر إلكتروني",
+    "Create an electronic store to display your products and manage your store easily.": "إنشاء متجر إلكتروني احترافي لعرض منتجاتك وإدارة مبيعاتك بسهولة.",
     "Top Seller": "أعلى بائع",
     "Reviewed By": "تمت مراجعته من قبل",
     "By :x": "بقلم: x",
     ":x star": ": س نجمة",
     "Photos": "الصور",
+    "Product Catalog Inquiry": "استضافة كتالوج المنتجات",
+    "Inquire about and organize product catalogs with an easy and secure method.": "استضافة وتنظيم كتالوج منتجاتك بطريقة احترافية وسهلة التصفح.",
+    "Direct Contact with Importers": "التواصل مع المشترين مباشرة",
+    "Direct communication channels with importers to facilitate negotiations and complete transactions.": "قنوات تواصل مباشرة مع المشترين لتسهيل المفاوضات وإتمام الصفقات.",
     "Add New Role": "إضافة دور جديد",
     "Role Information": "معلومات الدور",
     "SMS Setup": "إعداد الرسائل القصيرة",
@@ -3008,8 +3041,16 @@
     "API Token": "رمز واجهة برمجة التطبيقات",
     "SID": "معرف الأمان",
     "Account SID": "معرف حساب SID",
+    "Discover the Power of Saudi Industry": "اكتشف قوة الصناعة السعودية",
+    "Towards Achieving Kingdom's Vision 2030": "نحو تحقيق رؤية المملكة 2030",
+    "We contribute to empowering Saudi industry and promoting it globally through innovative digital solutions that support economic transformation and align with the Kingdom's Vision 2030 goals.": "نساهم في تمكين الصناعة السعودية وتعزيز حضورها العالمي عبر حلول رقمية مبتكرة تدعم التحول الاقتصادي وتواكب مستهدفات رؤية المملكة 2030.",
+    "Browse high-quality products from trusted Saudi factories. Benefit from cooperation and distribution opportunities through our integrated platform.": "تصفح منتجات عالية الجودة من مصانع سعودية موثوقة، واستفد من فرص التعاون والتوريد عبر منصتنا المتكاملة.",
+    "Browse Products": "تصفح المنتجات",
     "Auth Token": "رمز المصادقة",
     "Twilio Number": "رقم تويليو",
+    "Request Price Quotes Without Registration": "طلب عرض سعر بدون تسجيل",
+    "Get the best offers from trusted manufacturers through our network of specialists. Request quotes easily and compare prices to ensure competitive prices and quality services.": "احصل على أفضل العروض من موردين معتمدين منصتنا تربطك بشبكة واسعة من المقاولين والموردين المتخصصين لضمان الحصول على أسعار تنافسية وخدمات عالية الجودة",
+    "Request a Quote": "طلب عرض سعر",
     "Zender": "زيندر",
     "Site Url": "رابط الموقع",
     "The site url of your Zender. Do not add ending slash.": "عنوان URL لموقع Zender الخاص بك. لا تقم بإضافة شرطة مائلة في النهاية.",
@@ -3899,17 +3940,22 @@
     "Feedbacks you gave on the products that you bought..": "التعليقات التي قدمتها على المنتجات التي اشتريتها ..",
     "Approve": "يوافق",
     "Unapprove": "غير موافق",
+    "Continuous Support": "دعم فني متواصل",
+    "Customer service available around the clock": "خدمة عملاء جاهزة علي مدار الساعة",
     "stars": "النجوم",
     "Approved": "وافق",
     "No review found!": "لم يتم العثور على مراجعة!",
     "We're sorry!": "آسفون!",
-    "You haven't reviewed any product yet.": "لم تقم بمراجعة أي منتج حتى الآن.",
+    "Factories Services": "خدمات المصانع",
+    "Smart solutions to help Saudi factories display their products and connect directly with importers around the world.":"حلول ذكية لمساعدة المصانع السعودية على عرض منتجاتها والتواصل مباشرة مع المستوردين حول العالم.",
     "Please check your login activities below.": "يرجى التحقق من أنشطة تسجيل الدخول الخاصة بك أدناه.",
     "No activites found.": "لم يتم العثور على أنشطة.",
     "Update Pasword": "تحديث كلمة المرور",
     "Your Profile": "ملفك الشخصي",
     "What you show about yourself to the world..": "ما تظهره عن نفسك للعالم ..",
     "Edit profile": "تعديل الملف الشخصي",
+    "Importers Services": "خدمات المستوردين",
+    "Discover thousands of trusted factories and connect with them easily through our platform and one source for all your needs.": "اكتشف مئات المصانع الموثوقة، واطلب منتجاتك بسهولة عبر منصة واحدة تجمعك بالمصدر مباشرة.",
     "Profile Display": "عرض الملف الشخصي",
     "personal information": "معلومات شخصية",
     "Configure your account settings and be secured": "تكوين إعدادات حسابك وتأمينها",
@@ -3958,9 +4004,10 @@
     "Why Choose Us": "لماذا تختارنا",
     "AI-Powered Matching": "مطابقة مدعومة بالذكاء الاصطناعي",
     "Advanced AI algorithms to match Saudi products with global buyers": "خوارزميات ذكاء اصطناعي متقدمة لمطابقة المنتجات السعودية مع المشترين العالميين",
-    "Global Reach": "الوصول العالمي",
     "Connect Saudi manufacturers with buyers worldwide": "ربط المصانع السعودية بالمشترين حول العالم",
     "Secure & Transparent": "آمن وشفاف",
+    "High Efficiency": "كفاءة عالية",
+    "Accurate and fast operations in record time": "عمليات دقيقة وتسليم في الوقت المحدد",
     "Trusted platform with secure transactions and transparent processes": "منصة موثوقة مع معاملات آمنة وعمليات شفافة",
     "Supporting Vision 2030": "دعم رؤية 2030",
     "Your trusted B2B digital platform connecting Saudi manufacturers with global buyers": "منصتك الرقمية الموثوقة للتجارة بين الشركات التي تربط المصانع السعودية بالمشترين العالميين"
