--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1523,6 +1523,36 @@
     "Logged at": "Logged at",
     "Total Orders": "Total Orders",
     "Invoice": "Invoice",
+    "Pre-Shipment Inspection": "Pre-Shipment Inspection",
+    "Inspection and verification service before shipment to ensure quality and specifications.": "Inspection and verification service before shipment to ensure quality and specifications.",
+    "Certified Saudi Factories": "Certified Saudi Factories",
+    "Deal with certified Saudi factories with guaranteed quality and quality assurance for your peace of mind.": "Deal with certified Saudi factories with guaranteed quality and quality assurance for your peace of mind.",
+    "Direct Contact with Factories": "Direct Contact with Factories",
+    "Direct communication channels with factories to facilitate negotiations and complete transactions.": "Direct communication channels with factories to facilitate negotiations and complete transactions.",
+    "Price Quote Request Without Registration": "Price Quote Request Without Registration",
+    "Get price quotes from factories without the need to register on the platform.": "Get price quotes from factories without the need to register on the platform.",
+    "Factory Comparison": "Factory Comparison",
+    "Advanced comparison tools for factories and prices to make informed purchasing decisions.": "Advanced comparison tools for factories and prices to make informed purchasing decisions.",
+    "Integrated Logistics Services": "Integrated Logistics Services",
+    "Complete solutions for inspection, shipment, and delivery of your products safely and quickly.": "Complete solutions for inspection, shipment, and delivery of your products safely and quickly.",
+    "Display Products for Each Platform Visitor": "Display Products for Each Platform Visitor",
+    "Wide access and display of your products to all platform visitors to increase commercial opportunities.": "Wide access and display of your products to all platform visitors to increase commercial opportunities.",
+    "Factory Certification": "Factory Certification",
+    "Obtain factory certification to enhance customer confidence in your products and services.": "Obtain factory certification to enhance customer confidence in your products and services.",
+    "Direct Contact with Importers": "Direct Contact with Importers",
+    "Direct communication channels with importers to facilitate negotiations and complete transactions.": "Direct communication channels with importers to facilitate negotiations and complete transactions.",
+    "Product Catalog Inquiry": "Product Catalog Inquiry",
+    "Inquire about and organize product catalogs with an easy and secure method.": "Inquire about and organize product catalogs with an easy and secure method.",
+    "E-Store": "E-Store",
+    "Create an electronic store to display your products and manage your store easily.": "Create an electronic store to display your products and manage your store easily.",
+    "Towards Achieving Kingdom's Vision 2030": "Towards Achieving Kingdom's Vision 2030",
+    "We contribute to empowering Saudi industry and promoting it globally through innovative digital solutions that support economic transformation and align with the Kingdom's Vision 2030 goals.": "We contribute to empowering Saudi industry and promoting it globally through innovative digital solutions that support economic transformation and align with the Kingdom's Vision 2030 goals.",
+    "Discover the Power of Saudi Industry": "Discover the Power of Saudi Industry",
+    "Browse high-quality products from trusted Saudi factories. Benefit from cooperation and distribution opportunities through our integrated platform.": "Browse high-quality products from trusted Saudi factories. Benefit from cooperation and distribution opportunities through our integrated platform.",
+    "Browse Products": "Browse Products",
+    "Request Price Quotes Without Registration": "Request Price Quotes Without Registration",
+    "Get the best offers from trusted manufacturers through our network of specialists. Request quotes easily and compare prices to ensure competitive prices and quality services.": "Get the best offers from trusted manufacturers through our network of specialists. Request quotes easily and compare prices to ensure competitive prices and quality services.",
+    "Request a Quote": "Request a Quote",
     "": "",
     "Fees": "Fees",
     "Updated At": "Updated At",
@@ -3941,13 +3971,32 @@
     "on your card.": "on your card.",
     "Contact your": "Contact your",
     "bank": "bank",
+    "Factories Services": "Factories Services",
+    "Smart solutions to help Saudi factories display their products and connect directly with importers around the world.": "Smart solutions to help Saudi factories display their products and connect directly with importers around the world.",
+    "Start Your Business Journey Today": "Start Your Business Journey Today",
+    "Join thousands of factories and importers who trust our platform and benefit from the best technical solutions in the market.": "Join thousands of factories and importers who trust our platform and benefit from the best technical solutions in the market.",
+    "RFQs": "RFQs",
+    "Importers Services": "Importers Services",
+    "Discover thousands of trusted factories and connect with them easily through our platform and one source for all your needs.": "Discover thousands of trusted factories and connect with them easily through our platform and one source for all your needs.",
+    "Global Reach": "Global Reach",
+    "Continuous Support": "Continuous Support",
+    "Customer service available around the clock": "Customer service available around the clock",
+    "A shipping network that reaches all parts of the world": "A shipping network that reaches all parts of the world",
+    "Our Services": "Our Services",
+    "We provide comprehensive solutions for Saudi factories and importers": "We provide comprehensive solutions for Saudi factories and importers",
+    "Trusted Security": "Trusted Security",
+    "Comprehensive protection for all transactions": "Comprehensive protection for all transactions",
+    "High Efficiency": "High Efficiency",
+    "Accurate and fast operations in record time": "Accurate and fast operations in record time",
+    "Exports Valley": "Exports Valley",
+    "A comprehensive platform connecting Saudi factories with importers worldwide. We provide a safe and integrated environment for international trade, offering digital solutions backed by artificial intelligence to simplify communication, negotiation, and agreement processes.": "A comprehensive platform connecting Saudi factories with importers worldwide. We provide a safe and integrated environment for international trade, offering digital solutions backed by artificial intelligence to simplify communication, negotiation, and agreement processes.",
     "to temporarily increase the limit or enable online payments.": "to temporarily increase the limit or enable online payments.",
     "If the issue persists, please": "If the issue persists, please",
     "try another card": "try another card",
     "or payment method.": "or payment method.",
     "AI-Powered Matching": "AI-Powered Matching",
     "Advanced AI algorithms to match Saudi products with global buyers": "Advanced AI algorithms to match Saudi products with global buyers",
-    "Global Reach": "Global Reach",
+   
     "Connect Saudi manufacturers with buyers worldwide": "Connect Saudi manufacturers with buyers worldwide",
     "Secure & Transparent": "Secure & Transparent",
     "Trusted platform with secure transactions and transparent processes": "Trusted platform with secure transactions and transparent processes",
