Update footer links and localization, improve layouts

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -46,7 +46,7 @@
     "Close": "إغلاق",
     "Yes, Confirm": "نعم ، قم بالتأكيد",
     "image": "صورة",
-    "View": "منظر",
+    "View": "عرض",
     "Delete :x": "حذف: x",
     "User": "المستخدم",
     "Id": "هوية شخصية",
@@ -2272,7 +2272,7 @@
     "Upload Photo": "حمل الصورة",
     "Failed to process the request. Check network log for more information.": "فشل في معالجة الطلب. تحقق من سجل الشبكة لمزيد من المعلومات.",
     "Sorry, your browser doesn't support embedded videos.": "عذرا ، متصفحك لا يدعم ملفات الفيديو المضمنة.",
-    "VIEW": "منظر",
+    "VIEW": "عرض",
     "No data found.": "لاتوجد بيانات.",
     "Accept": "قبول",
     "Export all columns": "تصدير كافة الأعمدة",
