--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -423,7 +423,7 @@
     "Category Type": "نوع الفئة",
     "Upload RFQs": "أرفق ملف RFQs",
     "Categories": "الفئات",
-    "Exports Valley": "إكسبورتس فاللي",
+    "Exports Valley": "إكسبورتس فالي",
     "A comprehensive platform connecting Saudi factories with importers worldwide. We provide a safe and integrated environment for international trade, offering digital solutions backed by artificial intelligence to simplify communication, negotiation, and agreement processes.": "منصة متطورة تجمع المصانع السعودية مع المستوردين من جميع أنحاء العالم. نوفر بيئة آمنة ومتكاملة للتجارة الإلكترونية تمكن المصانع السعودية من الوصول إلى الأسواق العالمية بسهولة وتوفر حلولاً رقمية محلية مبتكرة ومدعومة بالذكاء الاصطناعي لتبسيط عمليات التواصل والتفاوض والاتفاق ",
     "Options": "خيارات",
     "Category Grid (Row X Col)": "شبكة الفئة (الصف X العمود)",
