--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1261,7 +1261,7 @@
     "I plan to sell products": "أخطط لبيع المنتجات",
     "Already have an account?": "هل لديك حساب؟",
     "Enter your email and password to access your account": "أدخل بريدك الإلكتروني وكلمة المرور",
-    "sign in": "تسجيل الدخول",
+    "sign in": "تسجيل دخول",
     "sign up": "إنشاء حساب",
     "Forgot Password?": "هل نسيت كلمة المرور؟",
     "Popups": "تظهر ظهور مفاجئ",
@@ -2460,8 +2460,8 @@
     "Attribute Groups": "مجموعات السمات",
     "Add Attribute Group": "أضف مجموعة السمات",
     "All :x": "الكل: x",
-    "Log In": "تسجيل الدخول",
-    "Sign In": "تسجيل الدخول",
+    "Log In": "تسجيل دخول",
+    "Sign In": "تسجيل دخول",
     "password": "كلمة المرور",
     "Factories": "المصانع",
     "Remember Me": "تذكرنى",
@@ -2472,7 +2472,7 @@
     "Already have an account? Login": "هل لديك حساب؟ تسجيل الدخول",
     "Buyer Registration": "تسجيل المشتري",
     "Create your buyer account to start purchasing": "أنشئ حسابك المشتري لبدء الشراء",
-    "Login": "تسجيل الدخول",
+    "Login": "تسجيل دخول",
     "I agree to the": "أنا أوافق على",
     "Terms and Conditions": "الشروط والأحكام",
     "Privacy Policy": "سياسة الخصوصية",
